# ShadowIsland-Tool

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: outputs.md  usage.md
examples/: sample.fasta  sample.gff3
model_bundle/: README.md  checksums.txt
scripts/: check_model_bundle.py  smoke_test.sh
shadowisland_tool/: __init__.py  cli.py  io.py  pipeline.py  scripts_support.py  types.py
shadowisland_tool/assets/: __init__.py
shadowisland_tool/assets/viewer/: __init__.py  app.js  styles.css
shadowisland_tool/assets/web/: app.js  index.html  styles.css
shadowisland_tool/assets/web/canonical_case_circos/: app.js  case_data.js  gc_windows.js  index.html  refseq_genes.js  selection_metrics.csv
shadowisland_tool/evidence/: __init__.py  auto.py  gff.py  reference.py
shadowisland_tool/inference/: __init__.py  _features.py  _released_backend.py  decode.py  released_workflow.py
shadowisland_tool/inference/r2_lib/igloo_v2/: __init__.py  attention.py  config.py  igloo_kernel_v2.py  patch_generators.py  positional.py
shadowisland_tool/inference/r2_lib/models/: __init__.py  encoder_v2.py
shadowisland_tool/report/: __init__.py  writers.py
shadowisland_tool/web/: __init__.py  server.py
